--- a/website/newsletter/200/index.mdx
+++ b/website/newsletter/200/index.mdx
@@ -1,20 +1,21 @@
 ---
 slug: /200
-title: "This Week In React #200: ..."
+title: "This Week In React #200: Remix, React Universe, Next.js dynamicIO, :has, Redwood, MDX, Atomic-CRM, NewArch, Fusebox, Hermes, Gesture Handler, TypedGPU, Firebase, Vite, Express, TypeScript, Rsbuild..."
 authors: [matthieugicquel, cyrilbo]
 date: 09-11-2024
-unlisted: true
 ---
 
 Hi everyone!
 
-Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, standing in for Seb to bring you the latest news from the React and React Native worlds.
+**Cyril and Matthieu** from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, standing in for Seb to bring you the latest news from the React and React Native worlds.
 
-This week is all about Server Components, with new features related to them in Vite and Next.Js. We also have a few articles on the topic that you might want to read. We also have a lot of Remix-related content.
+This week is all about Server Components, with new features related to them in Vite and Next.js. We also have a few articles on the topic that you might want to read. We also have a lot of Remix-related content and discussions related to the ChatGPT adoption.
 
 On the React Native side, as planned, there were major announcements at React Universe, and React Native 0.76 is coming in a few weeks!
 
 The React Native party is not over. Check our partner conf [**React Natuve 🇬🇧 London**](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) (14 & 15 November) and get a 10% discount with our code “TWIR”. It's the first edition, and they already have a great line-up including Charlie Cheever, Alex Hunt, Charlotte Isambert, and Cedric Van Putten.
+
+**Seb**: I'll drop by quickly to celebrate the 200th edition of this newsletter 🎉. Thank you for following me for so long on this adventure!
 
 <!-- truncate -->
 
@@ -127,7 +128,7 @@ Last week, Wrocław was the stage for React Universe, where major announcements 
 
 [![React Native DevTools](/emails/issues/200/react-native-devtools.jpg)](https://www.youtube.com/watch?v=b48Lax2-jOQ&t=4350s)
 
-- 🎥 [Alex Hunt - The New React Native Debugger](https://www.youtube.com/watch?v=b48Lax2-jOQ&t=4350s)  
+- 🎥 [Alex Hunt - The New React Native Debugger - Codename "Fusebox"](https://www.youtube.com/watch?v=b48Lax2-jOQ&t=4350s)
   Debugging tools for React Native have long been fragmented, but the new "React Native DevTools" introduces a unified experience with a new backend powered by the Chrome DevTools Protocol (CDP). This architecture, supported by IDEs and Chrome DevTools, promises more reliable breakpoints and stable reloads. It supports both the new and old architectures, positioning itself as the go-to debugging solution for React Native apps. Direct Hermes debugging via Chrome will be phased out, though performance and network inspection features are still in progress.
 
 [![Hermes Performance Chart](/emails/issues/200/hermes-perf.jpg)](https://www.youtube.com/watch?v=pfeTPSai6vc&t=8702s)
@@ -174,8 +175,8 @@ Last week, Wrocław was the stage for React Universe, where major announcements 
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/200/meme.jpg)](https://x.com/JLarky/status/1831873626985144708)
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/200/meme2.jpg)](https://x.com/bionanek/status/1831649116415299837)
 
 See ya! 👋
