--- a/website/newsletter/200/index.mdx
+++ b/website/newsletter/200/index.mdx
@@ -15,7 +15,7 @@ On the React Native side, as planned, there were major announcements at React Un
 
 The React Native party is not over. Check our partner conf [**React Natuve 🇬🇧 London**](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) (14 & 15 November) and get a 10% discount with our code “TWIR”. It's the first edition, and they already have a great line-up including Charlie Cheever, Alex Hunt, Charlotte Isambert, and Cedric Van Putten.
 
-**Seb**: I'll drop by quickly to celebrate the 200th edition of this newsletter 🎉. Thank you for following me for so long on this adventure!
+**Seb**: I'll drop by quickly to celebrate the 200th edition of this newsletter 🎉. Thank you for reading us so faithfully all these years. At 43k subscribers, we're sustainable and on track to becoming a real media for developers.
 
 <!-- truncate -->
 
