--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/200/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/200/index.mdx
@@ -9,13 +9,13 @@ Salut à tous !
 
 **Cyril et Matthieu** de [Theodo Apps (anciennement BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) sont présents 👋, ils remplacent Seb pour vous présenter les dernières nouvelles des mondes React et React Native.
 
-This week is all about Server Components, with new features related to them in Vite and Next.js. We also have a few articles on the topic that you might want to read. We also have a lot of Remix-related content and discussions related to the ChatGPT adoption.
+Cette semaine est consacrée aux Server Components, avec de nouvelles fonctionnalités dans Vite et Next.js. Nous avons également quelques articles sur le sujet que vous aimeriez peut-être lire. Nous avons également beaucoup de contenu lié à Remix et des discussions liées à l'adoption de ChatGPT.
 
-On the React Native side, as planned, there were major announcements at React Universe, and React Native 0.76 is coming in a few weeks!
+Du côté de React Native, comme prévu, il y a eu des annonces majeures lors de React Universe, et React Native 0.76 arrive dans quelques semaines !
 
-The React Native party is not over. Check our partner conf [**React Natuve 🇬🇧 London**](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) (14 & 15 November) and get a 10% discount with our code “TWIR”. It's the first edition, and they already have a great line-up including Charlie Cheever, Alex Hunt, Charlotte Isambert, and Cedric Van Putten.
+La fête de React Native n'est pas terminée. Allez voir notre partenaire de conférence [**React Native 🇬🇧 London**](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) (14 & 15 novembre) et bénéficiez de 10% de réduction avec notre code « TWIR ». C'est la première édition, et ils ont déjà un excellent programme avec Charlie Cheever, Alex Hunt, Charlotte Isambert et Cedric Van Putten.
 
-**Seb**: I'll drop by quickly to celebrate the 200th edition of this newsletter 🎉. Thank you for reading us so faithfully all these years. At 43k subscribers, we're sustainable and on track to becoming a real media for developers.
+**Seb** : Je passe rapidement pour fêter la 200e édition de cette newsletter 🎉. Merci de nous lire si fidèlement depuis toutes ces années. Avec 43k abonnés, nous sommes pérennes et en passe de devenir un véritable média pour les développeurs.
 
 <!-- truncate -->
 
@@ -53,42 +53,42 @@ Handsontable adapts to various use cases, from enterprise applications to simple
 
 [![Josh Comeau - The Undeniable Utility Of CSS `:has`](/emails/issues/200/css-has.jpg)](https://www.joshwcomeau.com/css/has/)
 
-**CSS `:has` for React developers**
+**Le CSS `:has` pour les développeurs React**
 
-This week we have 2 great articles about the new CSS `:has` selector, and how React developers can leverage it and simplify/delete their JS code while also improving performances. This new CSS feature had quite good support (92%) but can’t be polyfilled so for now you’d rather use it for subtle things and progressive enhancement.
+Cette semaine, nous avons deux excellents articles sur le nouveau sélecteur CSS `:has`, et sur la façon dont les développeurs React peuvent l'exploiter et simplifier/supprimer leur code JS tout en améliorant les performances. Cette nouvelle fonctionnalité CSS a été assez bien supportée (92%) mais ne peut pas être polyfilled donc pour l'instant il vaut mieux l'utiliser pour des choses subtiles et de l'amélioration progressive.
 
-Read in that order:
+A lire dans cet ordre :
 
-- 📜 [Josh Comeau \- The Undeniable Utility Of CSS `:has`](https://www.joshwcomeau.com/css/has/): Great interactive introduction article, also including some comments and examples relevant for React developers, such as blocking the global page scroll on modal opening with a data attribute instead of an `useEffect`.
-- 📜 [Nadia Makarevich \- Replacing React code with CSS `:has` selector](https://www.developerway.com/posts/replacing-react-with-css): Gives a few more interesting React-based examples, such as handling focus, highlighting table rows or form fieldset depending on input state.
+- 📜 [Josh Comeau \- The Undeniable Utility Of CSS `:has`](https://www.joshwcomeau.com/css/has/) : Excellent article d'introduction interactif, incluant également quelques commentaires et exemples pertinents pour les développeurs React, tels que le blocage du scroll global de la page lors de l'ouverture d'une modale avec un attribut data au lieu d'un `useEffect`.
+- 📜 [Nadia Makarevich \- Replacing React code with CSS `:has` selector](https://www.developerway.com/posts/replacing-react-with-css) : Donne quelques exemples plus intéressants basés sur React, tels que la gestion du focus, la mise en évidence des lignes de tableau ou des champs de formulaire en fonction de l'état de l'input.
 
-With great power comes great responsibility. Remember to keep your React components encapsulated, and avoid styles that leak outside component boundaries whenever possible.
+Un grand pouvoir implique de grandes responsabilités. N'oubliez pas de garder vos composants React encapsulés et évitez autant que possible les styles qui sortent des limites des composants.
 
 ---
 
 - 💸 [React Component Analytics — Omlet Scans Your Codebase to Measure Component Usage to Increase Code Quality and Design Systems Adoption](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-aug-2024)
-- 🐦 [Next.js - new `experimental.dynamicIO` flag to end caching headaches](https://x.com/feedthejim/status/1831224197827166613): This flag will ensure components that perform async IOs like fetches and DB queries use dynamic rendering by default.
+- 🐦 [Next.js - new `experimental.dynamicIO` flag to end caching headaches](https://x.com/feedthejim/status/1831224197827166613) : Ce flag permet de s'assurer que les composants qui effectuent des IO asynchrones comme les fetches et les DB queries utilisent le rendu dynamique par défaut.
 - 🐦 [ChatGPT migrated from Next.js to Remix](https://x.com/ryanflorence/status/1831379475654947233)
-- 👀 [Vite 6 PR merged - Environment API](https://github.com/vitejs/vite/pull/16471): This is especially useful for React, as it properly models the different “environments” React apps run on: browser, SSR, RSC, with separate module graphs.
+- 👀 [Vite 6 PR merged - Environment API](https://github.com/vitejs/vite/pull/16471) : Ceci est particulièrement utile pour React, car il modélise correctement les différents « environnements » sur lesquels les applications React s'exécutent : navigateur, SSR, RSC, avec des graphes de modules distincts.
 - 👀 [Next.js PR - Partial Fallback Prerendering](https://github.com/vercel/next.js/pull/68958)
-- 📖 [TanStack Router - Virtual File Routes:](https://tanstack.com/router/v1/docs/framework/react/guide/virtual-file-routes) Tanstack Start has its equivalent of Remix `routes.ts`.
+- 📖 [TanStack Router - Virtual File Routes:](https://tanstack.com/router/v1/docs/framework/react/guide/virtual-file-routes) Tanstack Start a son équivalent Remix `routes.ts`.
 - 📖 [Next.js new docs - Progressive Web Applications (PWA)](https://nextjs.org/docs/app/building-your-application/configuring/progressive-web-apps)
-- 🗓️ [React-Brussels](https://www.react.brussels/?utm_source=thisweekinreact) - 🇧🇪 Brussels - 18 October - Get a 10% discount with code “TWIR”. Come and learn from Nicolas Dubien and Charlotte Isambert !
-- 🗓️ [reactjsday](https://2024.reactjsday.it/?utm_source=thisweekinreact) - 🇮🇹 Verona - 25 October - Get a 10% discount with code "TWIR". An awesome line up announced with Matheus Albuquerque, Aurora Scharff and Dani Coll !
-- 🗓️ [Squiggle Conf](https://2024.squiggleconf.com/?utm_source=thisweekinreact) - 🇺🇸 Boston - 03 & 04 October - Last call for tickets ! Don’t miss this event, and the “TWIR” 10% discount code !
-- 📜 [React and FormData](https://reacttraining.com/blog/react-and-form-data): advocates using FormData and provides practical solutions and TypeScript compatibility via Zod.
-- 📜 [Modern Data-Fetching in React](https://reacttraining.com/blog/modern-data-fetching-in-react): The article compares data-fetching methods like `useEffect`, `useQuery`, React Router loaders, Next.js `getServerSideProps`, Remix loaders, and React Server Components, highlighting trade-offs between client-side and server-side approaches.
-- 📜 [Oops, I accidentally made our website faster by switching to Remix](https://echobind.com/post/oops-i-accidentally-made-our-website-faster-by-switching-to-remix): Echobind details migration story from Next.js/Vercel to Remix/Railway. They were only looking to save a few bucks and were surprised by the performance (Lighthouse score) and SEO improvements.
-- 📜 [Deploying a Next.js App to Production in any server](https://www.saybackend.com/blog/04-deploy-nextjs-to-production-without-vercel): It does not give you all the optimizations Vercel provides, but it’s possible to deploy Next.js apps with docker and the `standalone` Next.js output mode.
-- 📜 [How to Show Task Sequence Progress with React Suspense and RSC in Next.js](https://www.nico.fyi/blog/next-js-sequential-tasks-progress-stepper-with-rsc-and-suspense): Using the `use` hook.
-- 📜 [Expressive components in vanilla React, part 1: TypeStates](https://massimilianomirra.com/notes/expressive-components-in-vanilla-react-part-1-type-states): “The choice isn’t really between building a state machine or not, it’s rather between building it implicitly or explicitly”.
-- 📜 [Preact or Svelte? An Embedded Widget Use Case](https://sentry.engineering/blog/preact-or-svelte-an-embedded-widget-use-case): Sentry chose Preact over Svelte for their user feedback widget.
+- 🗓️ [React-Brussels](https://www.react.brussels/?utm_source=thisweekinreact) - 🇧🇪 Bruxelles - 18 octobre - 10% de réduction avec le code « TWIR ». Apprenez avec Nicolas Dubien et Charlotte Isambert !
+- 🗓️ [reactjsday](https://2024.reactjsday.it/?utm_source=thisweekinreact) - 🇮🇹 Vérone - 25 octobre - 10% de réduction avec le code « TWIR ». Une programmation impressionnante est annoncée avec Matheus Albuquerque, Aurora Scharff et Dani Coll !
+- 🗓️ [Squiggle Conf](https://2024.squiggleconf.com/?utm_source=thisweekinreact) - 🇺🇸 Boston - 03 & 04 octobre - Dernier rappel pour les billets ! Ne manquez pas cet événement, et le code de réduction « TWIR » de 10% !
+- 📜 [React and FormData](https://reacttraining.com/blog/react-and-form-data) : préconise l'utilisation de FormData et fournit des solutions pratiques ainsi que la compatibilité TypeScript via Zod.
+- 📜 [Modern Data-Fetching in React](https://reacttraining.com/blog/modern-data-fetching-in-react) : L'article compare les méthodes de collecte de données comme `useEffect`, `useQuery`, les loaders React Router, le `getServerSideProps` de Next.js, les loaders Remix, et les React Server Components, en soulignant les compromis entre les approches côté client et côté serveur.
+- 📜 [Oops, I accidentally made our website faster by switching to Remix](https://echobind.com/post/oops-i-accidentally-made-our-website-faster-by-switching-to-remix) : Echobind détaille les détails de la migration de Next.js/Vercel vers Remix/Railway. Ils cherchaient seulement à économiser quelques dollars et ont été surpris par les performances (Lighthouse score) et les améliorations en matière de référencement.
+- 📜 [Deploying a Next.js App to Production in any server](https://www.saybackend.com/blog/04-deploy-nextjs-to-production-without-vercel) : Il ne vous donne pas toutes les optimisations que Vercel fournit, mais il est possible de déployer des applications Next.js avec docker et le mode de sortie `standalone` Next.js.
+- 📜 [How to Show Task Sequence Progress with React Suspense and RSC in Next.js](https://www.nico.fyi/blog/next-js-sequential-tasks-progress-stepper-with-rsc-and-suspense) : Utilisation du hook `use`.
+- 📜 [Expressive components in vanilla React, part 1: TypeStates](https://massimilianomirra.com/notes/expressive-components-in-vanilla-react-part-1-type-states) : « Le choix n'est pas vraiment entre la construction d'une machine à états ou non, mais plutôt entre la construction implicite ou explicite ».
+- 📜 [Preact or Svelte? An Embedded Widget Use Case](https://sentry.engineering/blog/preact-or-svelte-an-embedded-widget-use-case) : Sentry a choisi Preact plutôt que Svelte pour son widget de feedback utilisateur.
 - 📜 [Vercel - What’s new in React 19](https://vercel.com/blog/whats-new-in-react-19)
 - 📜 [How to Use React Compiler](https://www.freecodecamp.org/news/react-compiler-complete-guide-react-19/?utm_source=newsletter.reactdigest.net&utm_medium=newsletter&utm_campaign=how-to-use-react-compiler)
 - 📜 [MDX in Next.js](https://spacejelly.dev/posts/mdx-in-nextjs)
 - 📜 [Component auto import in Astro and MDX](https://lirantal.com/blog/component-auto-import-in-astro-framework/)
 - 📜 [File uploads with Remix](https://programmingarehard.com/2024/09/06/remix-file-uploads-updated.html/)
-- 📦 [Redwood v8.0](https://redwoodjs.com/upgrade/v8): Background jobs, easier SSR/RSC setup, Vite for Storybook, Docker support, and key package updates, while deprecating Webpack
+- 📦 [Redwood v8.0](https://redwoodjs.com/upgrade/v8) : Jobs en arrière-plan, configuration SSR/RSC plus facile, Vite pour Storybook, prise en charge de Docker et mises à jour de packages clés, tout en supprimant Webpack.
 - 📦 [Remix 2.12 - Single Fetch improvements \+ `future.unstable_optimizeDeps`](https://remix.run/docs/en/main/start/changelog#v2120)
 - 📦 [React Router 6.26.2 - Update the `unstable_dataStrategy` API](https://reactrouter.com/en/main/start/changelog#v6262)
 - 📦 [Remix-the-web - Collection of packages for use with Remix or any web framework](https://github.com/mjackson/remix-the-web)
@@ -124,31 +124,31 @@ Want to work on challenging problems and have **impact on hundreds of applicatio
 
 ## 📱 React-Native {#react-native}
 
-Last week, Wrocław was the stage for React Universe, where major announcements thrilled the React Native community. One of the standout moments was the unveiling of React Native 0.76, set to launch by the end of October. This release brings significant advancements, including the New Architecture enabled by default and the introduction of completely revamped React Native DevTools. It’s already available as [a 0.76 release candidate](https://github.com/facebook/react-native/releases/tag/v0.76.0-rc.0)\!
+La semaine dernière, Wrocław a été le théâtre de React Universe, où des annonces majeures ont enthousiasmé la communauté React Native. L'un des moments marquants a été le dévoilement de React Native 0.76, dont le lancement est prévu pour la fin du mois d'octobre. Cette version apporte des avancées significatives, notamment la nouvelle architecture activée par défaut et l'introduction des DevTools React Native entièrement remaniés. Elle est déjà disponible en tant que [release candidate 0.76](https://github.com/facebook/react-native/releases/tag/v0.76.0-rc.0)\ !
 
 [![React Native DevTools](/emails/issues/200/react-native-devtools.jpg)](https://www.youtube.com/watch?v=b48Lax2-jOQ&t=4350s)
 
 - 🎥 [Alex Hunt - The New React Native Debugger - Codename "Fusebox"](https://www.youtube.com/watch?v=b48Lax2-jOQ&t=4350s)
-  Debugging tools for React Native have long been fragmented, but the new "React Native DevTools" introduces a unified experience with a new backend powered by the Chrome DevTools Protocol (CDP). This architecture, supported by IDEs and Chrome DevTools, promises more reliable breakpoints and stable reloads. It supports both the new and old architectures, positioning itself as the go-to debugging solution for React Native apps. Direct Hermes debugging via Chrome will be phased out, though performance and network inspection features are still in progress.
+  Les outils de débogage pour React Native ont longtemps été fragmentés, mais le nouveau « React Native DevTools » introduit une expérience unifiée avec un nouveau backend alimenté par le Chrome DevTools Protocol (CDP). Cette architecture, prise en charge par les IDE et Chrome DevTools, promet des points d'arrêt plus fiables et des rechargements stables. Elle prend en charge à la fois les nouvelles et les anciennes architectures, se positionnant comme la solution de débogage de référence pour les applications React Native. Le débogage Direct Hermes via Chrome sera progressivement supprimé, bien que les fonctionnalités d'inspection des performances et du réseau soient toujours en cours d'élaboration.
 
 [![Hermes Performance Chart](/emails/issues/200/hermes-perf.jpg)](https://www.youtube.com/watch?v=pfeTPSai6vc&t=8702s)
 
 - 🎥 [Tzvetan Mikov - Hermes: Better performance with runtime bytecode translation](https://www.youtube.com/watch?v=pfeTPSai6vc&t=8702s)  
-  Static Hermes, introduced at React Native Europe last year, has sparked significant interest by challenging existing JavaScript engine standards. While still under development, Static Hermes offers a novel approach by compiling JavaScript into native machine code or typed bytecode through type annotation analysis, with the potential for C++-level performance. However, this workflow has its limitations: over-the-air (OTA) updates will no longer function, current JavaScript build tools like Babel do not retain type annotations, and there is still a considerable amount of untyped code in use. To address these challenges, the Hermes team has introduced runtime bytecode translation, which promises performance boosts of up to 12 times faster for native compilation. These innovations will be available in Hermes v2, once they have undergone extensive internal testing at Meta.
+  Static Hermes, présenté à React Native Europe l'année dernière, a suscité un intérêt significatif en remettant en question les normes existantes des moteurs JavaScript. Bien qu'encore en cours de développement, Static Hermes propose une nouvelle approche en compilant le JavaScript en code machine natif ou en bytecode typé grâce à l'analyse des annotations de type, avec la possibilité d'obtenir des performances équivalentes à celles du C++. Cependant, ce workflow a ses limites : les mises à jour over-the-air (OTA) ne fonctionneront plus, les outils de compilation JavaScript actuels comme Babel ne conservent pas les annotations de type, et il y a encore une quantité considérable de code non typé en cours d'utilisation. Pour relever ces défis, l'équipe Hermes a introduit la traduction du bytecode en cours d'exécution, qui promet des performances jusqu'à 12 fois supérieures à celles de la compilation native. Ces innovations seront disponibles dans Hermes v2, une fois qu'elles auront fait l'objet de tests internes approfondis chez Meta.
 
 ---
 
 - 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
-- 🐦 [React Native Firebase supports the New Architecture](https://x.com/notbrent/status/1832108444578672709): Great news as it’s widely used across projects. It was one of the missing stones to be able to activate the new architecture.
+- 🐦 [React Native Firebase supports the New Architecture](https://x.com/notbrent/status/1832108444578672709) : C'est une excellente nouvelle, car il est largement utilisé dans tous les projets. C'était l'une des pierres manquantes pour pouvoir activer la nouvelle architecture.
 - 🐦 [React Native IDE will support the New React Debugger (Fusebox)](https://x.com/kzzzf/status/1832017321235190117)
-- 📖 [New updates from Expo documentation](https://x.com/amanhimself/status/1833466032209727662): non-route files in expo-router, upgrade helper update for SDK 51, push notifications guide, E2E tests with Maestro.
+- 📖 [New updates from Expo documentation](https://x.com/amanhimself/status/1833466032209727662) : fichiers sans routes dans expo-router, mise à jour de l'aide pour la mise à niveau pour le SDK 51, guide des notifications push, tests E2E avec Maestro.
 - 📜 [The beauty of mathematics in crafting stunning animations](https://expo.dev/blog/the-beauty-of-mathematics-in-crafting-stunning-animations)
 - 📜 [Universal React Native - Operational Efficiency Across Platforms](https://raf.dev/blog/universal-react-native/)
 - 📜 [From idea to Google Play Store in 100 days](https://expo.dev/blog/from-idea-to-google-play-store-in-100-days)
 - 📦 [Metro v0.80.11 - Perf improvements making builds up to 15 times faster](https://x.com/MetroBundler/status/1831709057670861260)
 - 📦 [React Native Gesture Handler 2.19 - Full macOS support, keyboard accessibility on Web, multiple pointers support in LongPress](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.19.0)
 - 📦 [TypeGPU - TypeScript library that enhances the WebGPU API, allowing resource management in a type-safe, declarative way](https://docs.swmansion.com/TypeGPU/)
-- 📦 [expo-reaction-menu](https://github.com/arunabhverma/expo-reaction-menu): A showcase of a smooth reaction menu that can be used in messaging apps using Expo and Reanimated.
+- 📦 [expo-reaction-menu](https://github.com/arunabhverma/expo-reaction-menu) : Présentation d'un menu fluide pour des réactions qui peut être utilisé dans les applications de messagerie à l'aide d'Expo et de Reanimated.
 - 📦 [InAppModule - Example repo to add a Turbo Native Module locally in your app, and not as an external library](https://github.com/cipolleschi/inappmodule)
 - 🎥 [Reactiive - Pager Dots Animation with React Native (Reanimated)](https://www.youtube.com/watch?v=04K3wPK2yC8)
 - 🎥 [Expo - How to create a native module with the Expo modules API](https://youtu.be/CdaQSlyGik8?si=aH_DWm6nr5BM3hYL)
@@ -172,14 +172,14 @@ Last week, Wrocław was the stage for React Universe, where major announcements 
 
 - 🐦 [Tailwind v4 alpha demo](https://x.com/adamwathan/status/1830715726195306731)
 - 📖 [Vitest cheat sheet](https://github.com/sapegin/vitest-cheat-sheet)
-- 📜 [ESLint v8.x end of life and version support policy](https://eslint.org/blog/2024/09/eslint-v8-eol-version-support/): support stop in October, it’s time to migrate to ESLint v9 and flat config
+- 📜 [ESLint v8.x end of life and version support policy](https://eslint.org/blog/2024/09/eslint-v8-eol-version-support/) : la prise en charge s'arrêtera en octobre, il est temps de migrer vers ESLint v9 et la configuration plate (flat config)
 - 📜 [CSS display contents](https://ishadeed.com/article/display-contents/)
 - 📜 [The State of ES5 on the Web](https://philipwalton.com/articles/the-state-of-es5-on-the-web/)
 - 📜 [CSS @property and the New Style](https://ryanmulligan.dev/blog/css-property-new-style/)
 - 📦 [Typescript v5.6 - Disallowed Nullish and Truthy Checks, , Iterator Helper Methods, `--noUncheckedSideEffectImports`, `--noCheck`, Exclude Patterns for Auto-Imports & more](https://devblogs.microsoft.com/typescript/announcing-typescript-5-6/)
 - 📦 [Rsbuild 1.0 - Build tool based on Rspack](https://rsbuild.dev/community/releases/v1-0)
-- 📦 [Express 5.0](https://github.com/expressjs/express/releases/tag/v5.0.0): But still using `next` npm dist tag [until the types are updated and migration docs are written](https://github.com/expressjs/express/issues/5944#issuecomment-2341980442).
-- 🎥 [Matt Pocock - 5 Things They’ll never Add To TypeScript](https://www.youtube.com/watch?v=Zsj1UlCsuio): Stricter Omit, Negated Types, Nominal/Branded Types, Throws and Exact Types.
+- 📦 [Express 5.0](https://github.com/expressjs/express/releases/tag/v5.0.0) : Mais nous utilisons toujours la balise `next` npm dist [jusqu'à ce que les types soient mis à jour et que la documentation sur la migration soit écrite](https://github.com/expressjs/express/issues/5944#issuecomment-2341980442).
+- 🎥 [Matt Pocock - 5 Things They’ll never Add To TypeScript](https://www.youtube.com/watch?v=Zsj1UlCsuio) : Stricter Omit, Negated Types, Nominal/Branded Types, Throws et Exact Types.
 
 ---
 
