--- a/website/newsletter/200/index.mdx
+++ b/website/newsletter/200/index.mdx
@@ -13,7 +13,7 @@ This week is all about Server Components, with new features related to them in V
 
 On the React Native side, as planned, there were major announcements at React Universe, and React Native 0.76 is coming in a few weeks!
 
-The React Native party is not over. Check our partner conf [**React Natuve 🇬🇧 London**](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) (14 & 15 November) and get a 10% discount with our code “TWIR”. It's the first edition, and they already have a great line-up including Charlie Cheever, Alex Hunt, Charlotte Isambert, and Cedric Van Putten.
+The React Native party is not over. Check our partner conf [**React Native 🇬🇧 London**](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) (14 & 15 November) and get a 10% discount with our code “TWIR”. It's the first edition, and they already have a great line-up including Charlie Cheever, Alex Hunt, Charlotte Isambert, and Cedric Van Putten.
 
 **Seb**: I'll drop by quickly to celebrate the 200th edition of this newsletter 🎉. Thank you for reading us so faithfully all these years. At 43k subscribers, we're sustainable and on track to becoming a real media for developers.
 
