--- a/website/newsletter/201/index.mdx
+++ b/website/newsletter/201/index.mdx
@@ -43,7 +43,7 @@ import Support from "../_support.mdx";
 *   Easily create and share custom charts with your team to show design system adoption, legacy code reduction, least/most used components and props, and more.
     
 
-Get set up and run your first scan in <5 minutes. [Try for free](https://omlet.dev/?utm_campaign=partner_this-week-in-react_first-sponsor-sep-2024).
+Get set up and run your first scan in \<5 minutes. [Try for free](https://omlet.dev/?utm_campaign=partner_this-week-in-react_first-sponsor-sep-2024).
 
 ---
 
