--- a/website/newsletter/201/index.mdx
+++ b/website/newsletter/201/index.mdx
@@ -30,7 +30,7 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![Uncover React Component Usage Across Your Dev Teams](/emails/issues/201/omletad.jpg)](https://omlet.dev/?utm_campaign=partner_this-week-in-react_first-sponsor-sep-2024)
+[![Uncover React Component Usage Across Your Dev Teams](/emails/issues/201/omletad.png)](https://omlet.dev/?utm_campaign=partner_this-week-in-react_first-sponsor-sep-2024)
 
 **[Uncover React Component Usage Across Your Dev Teams](https://omlet.dev/?utm_campaign=partner_this-week-in-react_first-sponsor-sep-2024)**
 
