--- a/website/newsletter/201/index.mdx
+++ b/website/newsletter/201/index.mdx
@@ -12,9 +12,8 @@ Hi everyone!
 
 **Newsletter intro : React Summit US**
 
-*   🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 November - Get a 10% discount with code “TWIR”. The full line up is now available, take a tour on the conference website !
-    
-*   🗓️ [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇬🇧 London - 25 & 28 October - 10% discount with code TWIR. Full line-up revealed !
+- 🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 November - Get a 10% discount with code “TWIR”. The full line up is now available, take a tour on the conference website !
+- 🗓️ [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇬🇧 London - 25 & 28 October - 10% discount with code TWIR. Full line-up revealed !
 
 <!-- truncate -->
 
@@ -36,12 +35,9 @@ import Support from "../_support.mdx";
 
 ☁️ Imagine being able to see exactly how and where devs are using specific React components so you can spot ways to reduce front-end tech debt and prove design system value. You can with Omlet.
 
-*   Gain a central catalog of all the custom and reusable components you’ve used in production
-    
-*   Search and filter components by specific attributes to uncover what needs to be updated, debugged, or utilized more
-    
-*   Easily create and share custom charts with your team to show design system adoption, legacy code reduction, least/most used components and props, and more.
-    
+- Gain a central catalog of all the custom and reusable components you’ve used in production
+- Search and filter components by specific attributes to uncover what needs to be updated, debugged, or utilized more
+- Easily create and share custom charts with your team to show design system adoption, legacy code reduction, least/most used components and props, and more.
 
 Get set up and run your first scan in \<5 minutes. [Try for free](https://omlet.dev/?utm_campaign=partner_this-week-in-react_first-sponsor-sep-2024).
 
@@ -73,7 +69,7 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 <Todo />
 
-- 💸 [Sonny Sangha - Build a Zoom 2.0 Clone with React Native](https://go.clerk.com/jBpMIuk)
+- 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
 
 ---
 
